public/src/Components/App/reset.scss
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
html, body {
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
	overflow-x: scroll; 
	overflow-y: hidden;
  z-index: 0;
}
#wrapper {
	scroll-snap-type: x mandatory;
	display: flex;
	overflow-x: scroll;
	overflow-y: hidden;
	// -webkit-overflow-scrolling: touch;
	height: 1080px;
	width: 300%;

	* {
		scroll-snap-align: center;
	}
}

* {
		// -webkit-overflow-scrolling: touch;
		// outline: 1px solid red;
}
// * {
// 	outline: 1px solid red;
// }

